--- a/Alloy.AndAsync/Views/TestArticlePage/Index.cshtml
+++ b/Alloy.AndAsync/Views/TestArticlePage/Index.cshtml
@@ -8,12 +8,14 @@
 <h1 @Html.EditAttributes(x => x.CurrentPage.PageName)>@Model.CurrentPage.PageName</h1>
 
 <h2>
-    <br />
+    <br/>
     External Data Length: @Model.SomeExternalData.IfNotNull(x => x.Length)
     <br/>
     Site Start Page ID: @ContentReference.StartPage.ID (id from controller: @Model.SiteStartPageId)
     <br/>
 </h2>
+
+@Html.Action("AsyncAction")
 
 <p class="introduction" @Html.EditAttributes(x => x.CurrentPage.MetaDescription)>@Model.CurrentPage.MetaDescription</p>
 <div class="row">
