trying to reproduce http://world.episerver.com/support/Bug-list/bug/CMS-1262 - seems to be fixed

--- a/Alloy.AndAsync/Views/TestArticlePage/Index.cshtml
+++ b/Alloy.AndAsync/Views/TestArticlePage/Index.cshtml
@@ -5,7 +5,9 @@
 
 @{ Layout = "~/Views/Shared/Layouts/_LeftNavigation.cshtml"; }
 
-<h1 @Html.EditAttributes(x => x.CurrentPage.PageName)>@Model.CurrentPage.PageName</h1>
+<h1 @Html.EditAttributes(x => x.CurrentPage.PageName)> Page:
+    @Model.PageName
+</h1>
 
 <h2>
     <br/>
